# eq-questionnaire-launcher

./: .djlintrc  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  Makefile  Pipfile  README.md  eslint.config.js  go.mod  go.sum  launch.go  package-lock.json  package.json  pyproject.toml
.github/workflows/: codeql-analysis.yml  main.yml  master.yml  pull_request.yml
authentication/: auth.go
oidc/: oidc.go
scss/: test.scss
settings/: settings.go
static/css/: main.css
static/javascript/: launch.js
surveys/: surveys.go
templates/: launch.html  layout.html  test.html
